# RepoPulse-

./: .dockerignore  .gitignore  Dockerfile  README.md  analyse_reponses.md  compose.yaml  pyproject.toml  visualize_training_losses.py
.github/workflows/: ci-cd.yaml
docs/: project_documentation.tex  project_summary.tex
notebooks/: neural_network_training.ipynb
src/: __init__.py  ab_testing.py  api_server.py  dashboard.py  dashboard_lite.py  data_ingestion.py  data_validation.py  distributed.py  etl.py  inference_dashboard.py  model_engine.py  model_registry.py  model_selection.py  neural_network.py  orchestration.py  train_neural_network.py
